--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-lazyload-image",
+  "name": "react-lazyloading-images",
   "version": "1.0.0",
   "description": "Lazy load image component for react",
   "main": "index.js",
