--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Lazy load image component for react",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --watch",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -29,5 +31,16 @@
   "bugs": {
     "url": "https://github.com/JustFly1984/react-lazyload-image/issues"
   },
-  "homepage": "https://github.com/JustFly1984/react-lazyload-image#readme"
+  "homepage": "https://github.com/JustFly1984/react-lazyload-image#readme",
+  "devDependencies": {
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-react-jsx": "6.24.1",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "webpack": "3.11.0"
+  }
 }
