--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-lazyloading-images",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Lazy load image component for react",
-  "main": "index.js",
+  "main": "./build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --watch",
