--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "react-lazyloading-images",
-  "version": "1.2.3",
+  "version": "2.0.0",
   "description": "Lazy load image component for react",
   "main": "lib",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --watch",
-    "build": "webpack"
+    "build": "webpack",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
