--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "react-lazyloading-images",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Lazy load image component for react",
   "main": "lib",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --watch",
-    "build": "webpack",
-    "prepublish": "npm run build"
+    "build": "concurrently \"cross-env NODE_ENV=production npm run build:webpack\" \"cross-env NODE_ENV=production npm run build:babel\"",
+    "build:dev": "concurrently \"cross-env NODE_ENV=development npm run build:webpack\" \"cross-env NODE_ENV=development npm run build:babel\"",
+    "build:webpack": "rimraf ./dist && webpack",
+    "build:babel": "rimraf ./lib && babel ./src -d ./lib",
+    "prepublish": "npm run build",
+    "publish": "npm publish .",
+    "lint": "npx eslint ./src --fix"
   },
   "repository": {
     "type": "git",
@@ -20,12 +25,11 @@
     "component"
   ],
   "dependencies": {
-    "intersection-observer": "^0.5.0",
-    "prop-types": "^15.6.0"
+    "intersection-observer": "^0.5.1"
   },
   "peerDependencies": {
-    "react": "^16 || ^15.6.0",
-    "react-dom": "^16 || ^15.6.0"
+    "prop-types": "^15.6.2",
+    "react": "^16 || ^15.6.0"
   },
   "author": "Alexey Lyakhov <justfly1984@gmail.com>",
   "license": "MIT",
@@ -34,14 +38,43 @@
   },
   "homepage": "https://github.com/JustFly1984/react-lazyload-image#readme",
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-react-jsx": "6.24.1",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "webpack": "3.11.0"
+    "@babel/cli": "7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "acorn": "^6.0.4",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.21",
+    "concurrently": "^4.1.0",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.11.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard-react": "7.0.2",
+    "eslint-import-resolver-webpack": "0.10.1",
+    "eslint-plugin-ascii": "1.0.0",
+    "eslint-plugin-babel": "5.3.0",
+    "eslint-plugin-dependencies": "2.4.0",
+    "eslint-plugin-filenames": "1.3.2",
+    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-json": "1.3.2",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-no-inferred-method-name": "1.0.2",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-promiseparams": "1.0.8",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-functional-set-state": "1.2.1",
+    "eslint-plugin-react-perf": "2.0.9",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-you-dont-need-lodash-underscore": "6.4.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "webpack": "^4.28.2",
+    "webpack-cli": "^3.1.2"
   }
 }
